--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <script src="tests.js?v=29"></script>
   <script src="net.js?v=25"></script>
-  <script src="index.js?v=41"></script>
+  <script src="index.js?v=42"></script>
 
   <link rel="stylesheet" href="assets/cdn.jsdelivr.net/npm/purecss@3.0.0/build/base-min.css">
   <link rel="stylesheet" href="assets/cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -26,7 +26,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/unpkg.com/@highlightjs/cdn-assets@11.9.0/styles/vs2015.min.css">
 
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css?v=2">
   <link rel="stylesheet" href="common.css">
 </head>
 
